src/test/ui/derives/derives-span-Eq-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::cmp::Eq` is not satisfied
  --> $DIR/derives-span-Eq-tuple-struct.rs:8:5
   |
LL |     Error
   |     ^^^^^ the trait `std::cmp::Eq` is not implemented for `Error`
   |
   = note: required by `std::cmp::AssertParamIsEq`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
